src/styles/mainStyle.css
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.html {
  font-size: 62.5%;
}

.mainPage {
  min-height: 100vh;
  width: 100%;
  display: grid;
  grid-template-columns: [container-start] 1fr [center-start] repeat(10, [col-start] minmax(min-content, 10rem) [col-end]) [center-end] 1fr [container-end];
  grid-template-rows: 15vh minmax(85vh, min-content);
}
.mainPage .mainPage_headerContainer {
  grid-column: container-start/container-end;
  background-color: aqua;
  margin-bottom: 2rem;
}
.mainPage_mainBodyContainer {
  grid-column: center-start/center-end;
  padding-top: 3rem;
}
.mainPage_mainBodyContainer_fanclubContainer {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
  grid-auto-rows: min-content;
  justify-items: center;
  align-items: center;
  gap: 1rem;
  position: relative;
}
.mainPage_mainBodyContainer_fanclubContainer .fanclub_header {
  position: absolute;
  top: -3.2rem;
  left: calc(0.5rem + 4.2vw);
}
.mainPage_mainBodyContainer_fanclubContainer .fanclub_header::first-letter {
  color: red;
}
.mainPage_mainBodyContainer_fanclubContainer .fanclub_header::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  height: 0.1rem;
  width: 55vw;
  background-color: black;
}
.mainPage_mainBodyContainer_fanclubContainer .fanclub_card {
  height: 10rem;
  width: 14rem;
  border-right: 0.1rem beige solid;
  border-bottom: 0.1rem beige solid;
}
.mainPage_mainBodyContainer_fanclubContainer .fanclub_card div:first-child {
  height: 50%;
  width: 100%;
  background-size: cover;
}
.mainPage_mainBodyContainer_categories {
  padding-top: 2rem;
}
.mainPage_mainBodyContainer_categories h2 {
  padding-left: 4.8%;
}
.mainPage_mainBodyContainer_categoriesContainer {
  margin-top: 2rem;
  display: grid;
  grid-template-rows: repeat(3, min-content);
  gap: 3rem;
  align-items: center;
}
.mainPage_mainBodyContainer_categoriesContainer .categories_card_container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
  grid-auto-rows: min-content;
  justify-items: center;
  align-items: center;
  gap: 10px 0px;
  padding: 1rem 0 2rem;
}
.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .categories_first_unit {
  position: relative;
}
.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .categories_specific_names {
  position: absolute;
  left: 0%;
  top: -24%;
}
.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card {
  height: 10rem;
  width: 14rem;
  border-right: 0.1rem beige solid;
  border-bottom: 0.1rem beige solid;
}
.mainPage_mainBodyContainer_categoriesContainer .categories_card_container .cats_card div:first-child {
  width: 100%;
  height: 50%;
  background-size: cover;
}

